order_success page changes

--- a/templates/order_success.html
+++ b/templates/order_success.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<img
-			src="{% static 'success_img1.jpg' %}"
+			src="{% static 'cover_img1.jpg' %}"
 			alt="success_image"
 			class="imgContainer"
 		/>
@@ -30,7 +30,8 @@
 			style="
 				font-family: Playfair Display, Arial, Helvetica, sans-serif;
 				font-style: italic;
-				margin-top: 90px;
+				margin-top: 150px;
+				margin-left: 25px;
 			"
 		>
 			<h1 style="height: 100px">Your Order Placed Successfully</h1>
